world space AABBs for AnimationDataEntity